# playmate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  服务器初始化清单.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/crates/playmate-buddy/: Cargo.toml
backend/crates/playmate-buddy/src/: career_worker.rs  dto.rs  lib.rs  match_worker.rs  model.rs  routes.rs
backend/crates/playmate-circle/: Cargo.toml
backend/crates/playmate-circle/src/: dto.rs  lib.rs  model.rs  routes.rs
backend/crates/playmate-common/: Cargo.toml
backend/crates/playmate-common/src/: auth.rs  cache.rs  config.rs  db.rs  error.rs  hub.rs  lib.rs  notify.rs  response.rs  state.rs  storage.rs
backend/crates/playmate-feed/: Cargo.toml
backend/crates/playmate-feed/src/: dto.rs  handler.rs  lib.rs  model.rs  repository.rs  routes.rs
backend/crates/playmate-gateway/: Cargo.toml
backend/crates/playmate-gateway/src/: main.rs  upload.rs
backend/crates/playmate-im/: Cargo.toml
backend/crates/playmate-im/src/: dto.rs  handler.rs  lib.rs  model.rs  protocol.rs  repository.rs  routes.rs
backend/crates/playmate-market/: Cargo.toml
backend/crates/playmate-market/src/: dto.rs  lib.rs  model.rs  routes.rs
backend/crates/playmate-match/: Cargo.toml
backend/crates/playmate-match/src/: algorithm.rs  dto.rs  handler.rs  lib.rs  model.rs  repository.rs  routes.rs
backend/crates/playmate-user/: Cargo.toml
backend/crates/playmate-user/src/: dto.rs  handler.rs  lib.rs  model.rs  repo.rs  repository.rs  routes.rs  service.rs
backend/crates/playmate-user/src/handler/: auth.rs  feedback.rs  note.rs  notification.rs  profile.rs  questionnaire.rs  tag.rs
backend/crates/playmate-user/src/model/: auth.rs  user.rs
backend/crates/playmate-user/src/repo/: note_repo.rs  notification_repo.rs  user_repo.rs
backend/crates/playmate-user/src/service/: auth_service.rs  sms_service.rs  token_service.rs  wechat_service.rs
docs/ui/: Playmate-ui.html
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/app/: app.dart  router.dart  theme.dart
flutter_app/lib/core/api/: api_client.dart  api_exception.dart
flutter_app/lib/core/constants/: app_constants.dart
flutter_app/lib/core/router/: app_router.dart
flutter_app/lib/core/services/: upload_service.dart
flutter_app/lib/core/storage/: token_storage.dart
flutter_app/lib/core/theme/: app_theme.dart
flutter_app/lib/shared/widgets/: main_shell.dart  pm_bottom_nav.dart  pm_image.dart  pm_placeholder.dart  pm_swipe_back.dart
infra/: .env.prod.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
infra/migrations/: 20240101000000_create_users.sql  20240101000001_create_messages.sql  20240101000002_create_posts.sql  20240101000003_create_matches.sql  20240101000004_user_oauth.sql  20240101000005_create_post_comments.sql  20260405000000_create_users.sql  20260405000001_create_tags.sql  20260405000002_create_user_oauth.sql  20260405000003_create_user_stats.sql  20260405000004_create_user_questionnaire.sql  20260405000005_create_topics.sql  20260405000006_create_topic_comments.sql  20260405000007_create_topic_likes.sql  20260405000008_create_polls.sql  20260405000009_create_poll_votes.sql  20260405000010_create_social_groups.sql  20260405000011_create_lost_found.sql  20260405000012_create_second_hand.sql  20260405000013_create_part_time.sql  20260405000014_create_barter.sql  20260405000015_create_market_collects.sql  20260405000016_create_buddy_requests.sql  20260405000017_create_buddy_invitations.sql  20260405000018_create_career_profiles.sql  20260405000019_create_conversations.sql  20260405000020_create_messages.sql  20260405000021_create_notifications.sql  20260405000022_create_feedback.sql  20260405000023_create_learning_notes.sql  20260405000024_add_email_to_users.sql  20260418000025_create_buddy_gathers.sql  20260418000026_add_group_id_to_buddy_gathers.sql  20260418000027_create_menus_and_user_menu_tag.sql  20260418000028_alter_buddy_gathers_use_menu_ids.sql  20260418000029_add_activity_mode_to_buddy_gathers.sql  20260419000000_add_gather_extended_fields.sql  20260419000001_add_city_to_users.sql
miniprogram/: package-lock.json
miniprogram/src/: App.vue  pages.json  uni.scss
miniprogram/src/api/: auth.ts  buddy.ts  circle.ts  im.ts  market.ts  request.ts
miniprogram/src/components/: PmAvatar.vue  PmButton.vue  PmEmpty.vue  PmLoading.vue  PmTabBar.vue  PmTagChip.vue
miniprogram/src/composables/: useTabBar.ts
miniprogram/src/custom-tab-bar/: index.vue
miniprogram/src/pages/auth/: login.vue  questionnaire.vue  register.vue
miniprogram/src/pages/buddy/: candidates.vue  career.vue  detail.vue  index.vue  invitations.vue  search.vue
miniprogram/src/pages/circle/: group-chat.vue  groups.vue  index.vue  poll-detail.vue  topic-detail.vue
miniprogram/src/pages/fun/: category.vue  index.vue
miniprogram/src/pages/im/: chat.vue  index.vue
miniprogram/src/pages/market/: index.vue
miniprogram/src/pages/profile/: collects.vue  feedback.vue  growth-report.vue  (+5 more)
miniprogram/src/store/: buddy.ts  market.ts  user.ts
(+102 files in other folders)
