[workspace]
members = [
    "backend/crates/playmate-common",
    "backend/crates/playmate-gateway",
    "backend/crates/playmate-user",
    "backend/crates/playmate-im",
    "backend/crates/playmate-circle",
    "backend/crates/playmate-market",
    "backend/crates/playmate-buddy",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.18", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
dotenvy = "0.15"
dashmap = "5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2"
