[package]
name = "playmate-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
envy = "0.4"
