[package]
name = "playmate-user"
version = "0.1.0"
edition = "2021"

[dependencies]
playmate-common = { path = "../playmate-common" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
urlencoding = { workspace = true }
